--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- IMPORT GOOGLE ICONS -->
+     <link rel="stylesheet" href="link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search">
     <title>Weather App</title>
 </head>
 <body>
     <main class="main-container">
-
+        <header class="input-container">
+            <input class = " city-input" placeholder="Search City">
+            <button class="search-btn">
+                <span class="material-symbols-outlined">
+                    search
+                </span>
+            </button>
+        </header>
     </main>
 </body>
 </html>
