--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <!-- IMPORT GOOGLE ICONS -->
-     <link rel="stylesheet" href="link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search">
-    <title>Weather App</title>
+<link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />    <title>Weather App</title>
 </head>
 <body>
+    <!-- main container -->
     <main class="main-container">
+        <!-- input container -->
         <header class="input-container">
+            <!-- input -->
             <input class = " city-input" placeholder="Search City">
             <button class="search-btn">
                 <span class="material-symbols-outlined">
