fix: add type  text in input

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- input container -->
         <header class="input-container">
             <!-- input -->
-            <input class = " city-input" placeholder="Search City">
+            <input class = " city-input" placeholder="Search City" type="text">
             <button class="search-btn">
                 <span class="material-symbols-outlined">
                     search
