feat: add weather-info and location container

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
                 </span>
             </button>
         </header>
+
+        <!-- weather info -->
+         <section class="weather-info">
+            <div class="location-data-container">
+                <div class="location"></div>
+            </div>
+         </section>
     </main>
 </body>
 </html>
