fix: change icons link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <!-- IMPORT GOOGLE ICONS -->
 <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />    <title>Weather App</title>
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&display=swap" />  
+    <title>Weather App</title>
 </head>
 <body>
     <!-- main container -->
@@ -25,7 +26,11 @@
         <!-- weather info -->
          <section class="weather-info">
             <div class="location-data-container">
-                <div class="location"></div>
+                <div class="location">
+                    <span class="material-symbols-outlined">
+                        location_on
+                    </span>
+                </div>
             </div>
          </section>
     </main>
