feat: add in page weather info

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                     <span class="material-symbols-outlined">
                         location_on
                     </span>
+                    <h4 class="country-txt">Milano</h4>
+                    <h5 class="current-date-txt">Wed, 07 Aug</h5>
                 </div>
             </div>
          </section>
