--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
         <!-- weather info -->
          <section class="weather-info">
-            <div class="location-data-container">
+            <div class="location-date-container">
                 <div class="location">
                     <span class="material-symbols-outlined">
                         location_on
                     </span>
                     <h4 class="country-txt">Milano</h4>
-                    <h5 class="current-date-txt">Wed, 07 Aug</h5>
                 </div>
+                <h5 class="current-date-txt regular-txt">Wed, 07 Aug</h5>
             </div>
          </section>
     </main>
