--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 </div>
                 <h5 class="current-date-txt regular-txt">Wed, 07 Aug</h5>
             </div>
+
+            <div class="weather-summary-container">
+                <img src="assets/weather/clouds.svg" class="weather-summary-img" alt="">
+            </div>
          </section>
     </main>
 </body>
