--- a/index.html
+++ b/index.html
@@ -24,19 +24,23 @@
         </header>
 
         <!-- weather info -->
-         <section class="weather-info">
-            <div class="location-date-container">
-                <div class="location">
-                    <span class="material-symbols-outlined">
-                        location_on
-                    </span>
-                    <h4 class="country-txt">Milano</h4>
-                </div>
-                <h5 class="current-date-txt regular-txt">Wed, 07 Aug</h5>
-            </div>
+    <div class="location-date-container">
+        <div class="location">
+            <span class="material-symbols-outlined">
+                location_on
+            </span>
+            <h4 class="country-txt">Milano</h4>
+        </div>
+        <h5 class="current-date-txt regular-txt">Wed, 07 Aug</h5>
+    </div>
+
 
             <div class="weather-summary-container">
                 <img src="assets/weather/clouds.svg" class="weather-summary-img" alt="">
+                <div class="weather-summary-info">
+                    <h1 class="temp-txt">29 ℃</h1>
+                    <h3 class="condition-txt regular-txt">Clouds</h3>
+                </div>
             </div>
          </section>
     </main>
