--- a/index.html
+++ b/index.html
@@ -42,6 +42,51 @@
                     <h3 class="condition-txt regular-txt">Clouds</h3>
                 </div>
             </div>
+
+            <div class="weather-conditions-container">
+                <div class="condition-item">
+                    <span class="material-symbols-outlined">
+                        water_drop
+                    </span>
+                    <div class="condition-info">
+                        <h5 class="regular-txt">Humidity</h5>
+                        <h5 class="humidity-value-txt">55%</h5>
+                    </div>
+                </div>
+
+                <div class="condition-item">
+                    <span class="material-symbols-outlined">
+                        air
+                    </span>
+                    <div class="condition-info">
+                        <h5 class="regular-txt">Wind Speed</h5>
+                        <h5 class="wind-value-txt">2 M/s</h5>
+                    </div>
+                </div>
+            </div>
+
+                <div class="forecast-item-container">
+                    <div class="forecast-item">
+                        <h5 class="forecast-item-date regular-txt">05 Aug</h5>
+                        <img src="assets/weather/thunderstorm.svg" class="forecast-item-img" alt="">
+                        <h5 class="forecast-item-temp">29 ℃</h5>
+                    </div>
+                    <div class="forecast-item">
+                        <h5 class="forecast-item-date regular-txt">05 Aug</h5>
+                        <img src="assets/weather/thunderstorm.svg" class="forecast-item-img" alt="">
+                        <h5 class="forecast-item-temp">29 ℃</h5>
+                    </div>
+                    <div class="forecast-item">
+                        <h5 class="forecast-item-date regular-txt">05 Aug</h5>
+                        <img src="assets/weather/thunderstorm.svg" class="forecast-item-img" alt="">
+                        <h5 class="forecast-item-temp">29 ℃</h5>
+                    </div>
+                    <div class="forecast-item">
+                        <h5 class="forecast-item-date regular-txt">05 Aug</h5>
+                        <img src="assets/weather/thunderstorm.svg" class="forecast-item-img" alt="">
+                        <h5 class="forecast-item-temp">29 ℃</h5>
+                    </div>
+                </div>
          </section>
     </main>
 </body>
