--- a/index.html
+++ b/index.html
@@ -22,48 +22,48 @@
                 </span>
             </button>
         </header>
-
-        <!-- weather info -->
-    <div class="location-date-container">
-        <div class="location">
-            <span class="material-symbols-outlined">
-                location_on
-            </span>
-            <h4 class="country-txt">Milano</h4>
-        </div>
-        <h5 class="current-date-txt regular-txt">Wed, 07 Aug</h5>
-    </div>
-
-
-            <div class="weather-summary-container">
-                <img src="assets/weather/clouds.svg" class="weather-summary-img" alt="">
-                <div class="weather-summary-info">
-                    <h1 class="temp-txt">29 ℃</h1>
-                    <h3 class="condition-txt regular-txt">Clouds</h3>
+        <section class="weather-info" style="display:none">
+                    <!-- weather info -->
+                <div class="location-date-container">
+                    <div class="location">
+                        <span class="material-symbols-outlined">
+                            location_on
+                        </span>
+                        <h4 class="country-txt">Milano</h4>
+                    </div>
+                    <h5 class="current-date-txt regular-txt">Wed, 07 Aug</h5>
                 </div>
-            </div>
 
-            <div class="weather-conditions-container">
-                <div class="condition-item">
-                    <span class="material-symbols-outlined">
-                        water_drop
-                    </span>
-                    <div class="condition-info">
-                        <h5 class="regular-txt">Humidity</h5>
-                        <h5 class="humidity-value-txt">55%</h5>
+
+                <div class="weather-summary-container">
+                    <img src="assets/weather/clouds.svg" class="weather-summary-img" alt="">
+                    <div class="weather-summary-info">
+                        <h1 class="temp-txt">29 ℃</h1>
+                        <h3 class="condition-txt regular-txt">Clouds</h3>
                     </div>
                 </div>
 
-                <div class="condition-item">
-                    <span class="material-symbols-outlined">
-                        air
-                    </span>
-                    <div class="condition-info">
-                        <h5 class="regular-txt">Wind Speed</h5>
-                        <h5 class="wind-value-txt">2 M/s</h5>
+                <div class="weather-conditions-container">
+                    <div class="condition-item">
+                        <span class="material-symbols-outlined">
+                            water_drop
+                        </span>
+                        <div class="condition-info">
+                            <h5 class="regular-txt">Humidity</h5>
+                            <h5 class="humidity-value-txt">55%</h5>
+                        </div>
+                    </div>
+
+                    <div class="condition-item">
+                        <span class="material-symbols-outlined">
+                            air
+                        </span>
+                        <div class="condition-info">
+                            <h5 class="regular-txt">Wind Speed</h5>
+                            <h5 class="wind-value-txt">2 M/s</h5>
+                        </div>
                     </div>
                 </div>
-            </div>
 
                 <div class="forecast-item-container">
                     <div class="forecast-item">
