feat: add search-city img

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                     </div>
                 </div>
          </section>
+
+         <section class="search-city section-message">
+            <img src="assets/message/search-city.png" alt="">
+         </section>
     </main>
 </body>
 </html>
