feat: create serch city message and styling

--- a/index.html
+++ b/index.html
@@ -90,7 +90,13 @@
          </section>
 
          <section class="search-city section-message">
-            <img src="assets/message/search-city.png" alt="">
+            <img class="message-img" src="assets/message/search-city.png" alt="">
+             <div>
+                <h1>Search City</h1>
+                <h4 class="regular-txt">
+                    Find out the weather condition of the city
+                </h4>
+             </div>
          </section>
     </main>
 </body>
