feat: add 404 not found message and img

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
          </section>
 
          <section class="search-city section-message">
-            <img class="message-img" src="assets/message/search-city.png" alt="">
+            <img  src="assets/message/search-city.png" alt="">
              <div>
                 <h1>Search City</h1>
                 <h4 class="regular-txt">
@@ -98,6 +98,16 @@
                 </h4>
              </div>
          </section>
+
+            <section class="not-found section-message" style="display: none;">
+                <img  src="assets/message/not-found.png" alt="">
+                <div>
+                    <h1>Search City</h1>
+                    <h4 class="regular-txt">
+                        Find out the weather condition of the city
+                    </h4>
+                </div>
+            </section>
     </main>
 </body>
 </html>
